--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-This project is based on jeremyherbert's stm32-templates, found at https://github.com/jeremyherbert/stm32-templates.  He did a great job getting a working platform for the STM32F4-Discovery, but we want to simplify things a bit.
+This project is based on jeremyherbert's stm32-templates, found at https://github.com/jeremyherbert/stm32-templates.
 
-The goal is to create a base for the STM32F4-Discovery that does not require so many of STM's library, using our own startup file and reducing dependency on extra libraries.
-
-This project will only focus on the STM32F4, so all STM32VL files have been removed.
+This files here are only relevant to the stm32f4-discovery board and include the CMSIS library configured to be built along side main.c. The goal is to have a simple quickstart with the stm32f4 board on a Linux machine.
